<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="54dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/tv_riddle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="396dp"
        android:layout_height="67dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_riddle" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_answer" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ReAnswer" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/btn_showAnswer" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="204dp"
        android:layout_height="63dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_title"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="212dp"
        android:layout_height="89dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="395dp"
        android:layout_height="179dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="316dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="354dp"
            android:layout_height="162dp"
            app:srcCompat="@drawable/cat" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="92dp"
            android:layout_height="58dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="70dp"
            android:text="@string/tv_result"
            android:textColor="#81D4FA"
            android:textSize="20sp" />


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>